# cpp-multiplayer

./: .gitignore  CMakeLists.txt  NETWORKING_GUIDE.md  README.md  railway.toml
client/: audio_manager.cpp  audio_manager.hpp  connection_config.cpp  connection_config.hpp  game_client.cpp  game_client.hpp  main.cpp  pointer_input.cpp  pointer_input.hpp  tcp_client.cpp  tcp_client.hpp  viewport.cpp  viewport.hpp  web_text_input.cpp  web_text_input.hpp  world_view.cpp  world_view.hpp  ws_client.cpp  ws_client.hpp  ws_client_web.cpp
common/: arena_waves.hpp  combat.cpp  combat.hpp  config.hpp  enemies.cpp  enemies.hpp  entity_defs.hpp  entity_registry.cpp  entity_registry.hpp  entity_state.hpp  grid.hpp  grid_map.cpp  grid_map.hpp  pathfinding.cpp  pathfinding.hpp  protocol.cpp  protocol.hpp  session.hpp  skills.cpp  skills.hpp  socket_utils.cpp  socket_utils.hpp
config/: production.env.ps1.example
docker/: Dockerfile
server/: game_server.cpp  game_server.hpp  main.cpp  tcp_listener.cpp  tcp_listener.hpp  ws_listener.cpp  ws_listener.hpp
tools/: build.ps1  build_installer.ps1  build_release.ps1  build_web.ps1  generate_flipped_sprites.ps1  installer.iss  load_production_config.ps1
